# noscript

./: .clang-format  CMakeLists.txt  README.md  hello.js  hello.ts
src/: main.cc  utils.cc  utils.h
src/checker/: checker.cc  checker.h
src/diagnostics/: diagnostics.cc  diagnostics.h
src/frontend/: ast.cc  ast.h  lexer.cc  lexer.h  parser.cc  parser.h  token.cc  token.h
src/location/: location.h
src/painter/: painter.cc  painter.h
src/range/: range.h
src/scope/: scope.cc  scope.h
src/stdlib/: stdlib.cc  stdlib.h
src/types/: types.cc  types.h
